--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ language: go
 go:
   - 1.5
   - 1.6
+  - 1.7
   - tip
 
-script: make lint race-test
+script: make lint race-test bench
 
 before_script:
   - make test-install
@@ -13,7 +14,9 @@ before_script:
   - goose --env=travis up
 
 addons:
-  postgresql: "9.4"
+  postgresql: "9.5"
 
 services:
   - postgresql
+
+dist: trusty
